--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -1,4 +1,3 @@
-{% load static from staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -9,15 +8,12 @@
     <meta name="author" content="{% block meta-author %}{% endblock %}">
     <meta name="keywords" content="{% block meta-keywords %}{% endblock %}">
     {% block extra-meta %}{% endblock %}
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/bundle.css' %}">
     {% block extra-css %}{% endblock %}
-    <script src="{% static 'libs/modernizr.js' %}"></script>
 </head>
 <body>
     <div class="container">
-        {% block content %}{% endblock %}
+        {% block content %}<h1>Welcome, this is a default template.</h1>{% endblock %}
     </div>
-    <script src="{% static 'js/bundle.js' %}"></script>
     {% block extra-js %}{% endblock %}
 </body>
 </html>
